feat(profile): done but have vertical alignment issues

--- a/index.html
+++ b/index.html
@@ -22,7 +22,23 @@
           alt="Around the U.S. logo"
         />
       </header>
-      <main class="content"></main>
+      <main class="content">
+        <div class="profile">
+          <div class="avatar">
+            <img
+              class="avatar__image"
+              src="images/jacq-cousteau-avatar-pic.png"
+              alt="Jacques Cousteau photo"
+            />
+          </div>
+          <div class="profile-info">
+            <h1 class="profile-info__name">Jacques Cousteau</h1>
+            <button class="profile-info__button-edit"></button>
+            <p class="profile-info__occupation">Explorer</p>
+          </div>
+          <button class="profile__button-add"></button>
+        </div>
+      </main>
     </div>
   </body>
 </html>
