feat(elements) done. looks ok

--- a/index.html
+++ b/index.html
@@ -38,6 +38,98 @@
           </div>
           <button class="profile__button-add"></button>
         </div>
+        <div class="elements">
+          <article class="element">
+            <img
+              class="element__image"
+              src="images/yosemite-valley.png"
+              alt="Yosemite Valley photo"
+            />
+            <div class="element__wrap">
+              <h2 class="element__title">Yosemite Valley</h2>
+              <img
+                class="element__icon-like"
+                src="images/icons/heart-icon.svg"
+                alt="Heart icon"
+              />
+            </div>
+          </article>
+          <article class="element">
+            <img
+              class="element__image"
+              src="images/lake-louise.png"
+              alt="Lake Louise photo"
+            />
+            <div class="element__wrap">
+              <h2 class="element__title">Lake Louise</h2>
+              <img
+                class="element__icon-like"
+                src="images/icons/heart-icon.svg"
+                alt="Heart icon"
+              />
+            </div>
+          </article>
+          <article class="element">
+            <img
+              class="element__image"
+              src="images/bald-mountains.png"
+              alt="Bald Mountains photo"
+            />
+            <div class="element__wrap">
+              <h2 class="element__title">Bald Mountains</h2>
+              <img
+                class="element__icon-like"
+                src="images/icons/heart-icon.svg"
+                alt="Heart icon"
+              />
+            </div>
+          </article>
+          <article class="element">
+            <img
+              class="element__image"
+              src="images/latemar.png"
+              alt="Latemar photo"
+            />
+            <div class="element__wrap">
+              <h2 class="element__title">Latemar</h2>
+              <img
+                class="element__icon-like"
+                src="images/icons/heart-icon.svg"
+                alt="Heart icon"
+              />
+            </div>
+          </article>
+          <article class="element">
+            <img
+              class="element__image"
+              src="images/vanoise-national-park.png"
+              alt="Vanoise National Park photo"
+            />
+            <div class="element__wrap">
+              <h2 class="element__title">Vanoise National Park</h2>
+              <img
+                class="element__icon-like"
+                src="images/icons/heart-icon.svg"
+                alt="Heart icon"
+              />
+            </div>
+          </article>
+          <article class="element">
+            <img
+              class="element__image"
+              src="images/lago-di-braies.png"
+              alt="Lago di Braies photo"
+            />
+            <div class="element__wrap">
+              <h2 class="element__title">Lago di Braies</h2>
+              <img
+                class="element__icon-like"
+                src="images/icons/heart-icon.svg"
+                alt="Heart icon"
+              />
+            </div>
+          </article>
+        </div>
       </main>
     </div>
   </body>
