feat(footer): done

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         />
       </header>
       <main class="content">
-        <div class="profile">
+        <section class="profile">
           <div class="avatar">
             <img
               class="avatar__image"
@@ -37,8 +37,8 @@
             <p class="profile-info__occupation">Explorer</p>
           </div>
           <button class="profile__button-add"></button>
-        </div>
-        <div class="elements">
+        </section>
+        <section class="elements">
           <article class="element">
             <img
               class="element__image"
@@ -129,8 +129,11 @@
               />
             </div>
           </article>
-        </div>
+        </section>
       </main>
+      <footer class="footer">
+        <p class="copyright">&copy; 2021 Around The U.S.</p>
+      </footer>
     </div>
   </body>
 </html>
