--- a/index.html
+++ b/index.html
@@ -37,6 +37,27 @@
             <p class="profile-info__occupation">Explorer</p>
           </div>
           <button class="profile__button-add"></button>
+          <div class="popup">
+            <div class="popup__container">
+              <button type="button" class="popup__button-close"></button>
+              <h2 class="form-edit-profile__heading">Edit profile</h2>
+              <form class="form-edit-profile">
+                <input
+                  type="text"
+                  class="form-edit-profile__name"
+                  placeholder="Jacques Cousteau"
+                />
+                <input
+                  type="text"
+                  class="form-edit-profile__occupation"
+                  placeholder="Explorer"
+                />
+                <button type="submit" class="form-edit-profile__button-submit">
+                  Save
+                </button>
+              </form>
+            </div>
+          </div>
         </section>
         <section class="elements">
           <article class="element">
@@ -136,4 +157,5 @@
       </footer>
     </div>
   </body>
+  <script src="./scripts/index.js"></script>
 </html>
