feat(develop): Final version

--- a/index.html
+++ b/index.html
@@ -34,29 +34,29 @@
           <div class="profile-info">
             <h1 class="profile-info__name">Jacques Cousteau</h1>
             <button class="profile-info__button-edit"></button>
-            <p class="profile-info__occupation">Explorer</p>
+            <p class="profile-info__job">Explorer</p>
           </div>
           <button class="profile__button-add"></button>
-          <div class="popup">
-            <div class="popup__container">
-              <button type="button" class="popup__button-close"></button>
-              <h2 class="form-edit-profile__heading">Edit profile</h2>
-              <form class="form-edit-profile">
-                <input
-                  type="text"
-                  class="form-edit-profile__name"
-                  placeholder="Jacques Cousteau"
-                />
-                <input
-                  type="text"
-                  class="form-edit-profile__occupation"
-                  placeholder="Explorer"
-                />
-                <button type="submit" class="form-edit-profile__button-submit">
-                  Save
-                </button>
-              </form>
-            </div>
+        </section>
+        <section class="popup">
+          <div class="popup__container">
+            <button type="button" class="popup__button-close"></button>
+            <h2 class="form-edit-profile__heading">Edit profile</h2>
+            <form class="form-edit-profile">
+              <input
+                type="text"
+                class="form-edit-profile__name"
+                placeholder="Jacques Cousteau"
+              />
+              <input
+                type="text"
+                class="form-edit-profile__job"
+                placeholder="Explorer"
+              />
+              <button type="submit" class="form-edit-profile__button-submit">
+                Save
+              </button>
+            </form>
           </div>
         </section>
         <section class="elements">
@@ -153,7 +153,7 @@
         </section>
       </main>
       <footer class="footer">
-        <p class="copyright">&copy; 2021 Around The U.S.</p>
+        <p class="copyright">&copy; 2022 Around The U.S.</p>
       </footer>
     </div>
   </body>
