fix: removed comments from css files

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
               <input
                 type="text"
                 class="form-edit-profile__name"
-                placeholder="Jacques Cousteau"
+                placeholder=""
               />
               <input
                 type="text"
                 class="form-edit-profile__job"
-                placeholder="Explorer"
+                placeholder=""
               />
               <button type="submit" class="form-edit-profile__button-submit">
                 Save
