fix: removed redundant div with avatar class. class name moved to img tag

--- a/index.html
+++ b/index.html
@@ -24,13 +24,11 @@
       </header>
       <main class="content">
         <section class="profile">
-          <div class="avatar">
-            <img
-              class="avatar__image"
-              src="images/jacq-cousteau-avatar-pic.png"
-              alt="Jacques Cousteau photo"
-            />
-          </div>
+          <img
+            class="avatar"
+            src="images/jacq-cousteau-avatar-pic.png"
+            alt="Jacques Cousteau photo"
+          />
           <div class="profile-info">
             <h1 class="profile-info__name">Jacques Cousteau</h1>
             <button class="profile-info__button-edit"></button>
