--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="popup__container">
             <button type="button" class="popup__button-close"></button>
             <h2 class="form-edit-profile__heading">Edit profile</h2>
-            <form class="form-edit-profile">
+            <form class="form-edit-profile" name="form-edit-profile">
               <input
                 type="text"
                 class="form-edit-profile__name"
