--- a/index.html
+++ b/index.html
@@ -43,13 +43,15 @@
             <form class="form-edit-profile" name="form-edit-profile">
               <input
                 type="text"
-                class="form-edit-profile__name"
+                class="form-edit-profile__input form-edit-profile__input_type_name"
                 placeholder=""
+                name="name"
               />
               <input
                 type="text"
-                class="form-edit-profile__job"
+                class="form-edit-profile__input form-edit-profile__input_type_job"
                 placeholder=""
+                name="job"
               />
               <button type="submit" class="form-edit-profile__button-submit">
                 Save
