fix: element_icon-like images replaced by button element with class element__button-like

--- a/index.html
+++ b/index.html
@@ -68,11 +68,7 @@
             />
             <div class="element__wrap">
               <h2 class="element__title">Yosemite Valley</h2>
-              <img
-                class="element__icon-like"
-                src="images/icons/heart-icon.svg"
-                alt="Heart icon"
-              />
+              <button class="element__button-like" type="button"></button>
             </div>
           </article>
           <article class="element">
@@ -83,11 +79,7 @@
             />
             <div class="element__wrap">
               <h2 class="element__title">Lake Louise</h2>
-              <img
-                class="element__icon-like"
-                src="images/icons/heart-icon.svg"
-                alt="Heart icon"
-              />
+              <button class="element__button-like" type="button"></button>
             </div>
           </article>
           <article class="element">
@@ -98,11 +90,7 @@
             />
             <div class="element__wrap">
               <h2 class="element__title">Bald Mountains</h2>
-              <img
-                class="element__icon-like"
-                src="images/icons/heart-icon.svg"
-                alt="Heart icon"
-              />
+              <button class="element__button-like" type="button"></button>
             </div>
           </article>
           <article class="element">
@@ -113,11 +101,7 @@
             />
             <div class="element__wrap">
               <h2 class="element__title">Latemar</h2>
-              <img
-                class="element__icon-like"
-                src="images/icons/heart-icon.svg"
-                alt="Heart icon"
-              />
+              <button class="element__button-like" type="button"></button>
             </div>
           </article>
           <article class="element">
@@ -128,11 +112,7 @@
             />
             <div class="element__wrap">
               <h2 class="element__title">Vanoise National Park</h2>
-              <img
-                class="element__icon-like"
-                src="images/icons/heart-icon.svg"
-                alt="Heart icon"
-              />
+              <button class="element__button-like" type="button"></button>
             </div>
           </article>
           <article class="element">
@@ -143,11 +123,7 @@
             />
             <div class="element__wrap">
               <h2 class="element__title">Lago di Braies</h2>
-              <img
-                class="element__icon-like"
-                src="images/icons/heart-icon.svg"
-                alt="Heart icon"
-              />
+              <button class="element__button-like" type="button"></button>
             </div>
           </article>
         </section>
