fix(profile): added a type attribute to button-add

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <button class="profile-info__button-edit"></button>
             <p class="profile-info__job">Explorer</p>
           </div>
-          <button class="profile__button-add"></button>
+          <button class="profile__button-add" type="button"></button>
         </section>
         <section class="popup">
           <div class="popup__container">
