--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           />
           <div class="profile-info">
             <h1 class="profile-info__name">Jacques Cousteau</h1>
-            <button class="profile-info__button-edit"></button>
+            <button class="profile-info__button-edit" type="button"></button>
             <p class="profile-info__job">Explorer</p>
           </div>
           <button class="profile__button-add" type="button"></button>
