--- a/index.html
+++ b/index.html
@@ -31,14 +31,26 @@
           />
           <div class="profile-info">
             <h1 class="profile-info__name">Jacques Cousteau</h1>
-            <button class="profile-info__button-edit" type="button"></button>
+            <button
+              class="profile-info__button-edit"
+              type="button"
+              aria-label="edit"
+            ></button>
             <p class="profile-info__job">Explorer</p>
           </div>
-          <button class="profile__button-add" type="button"></button>
+          <button
+            class="profile__button-add"
+            type="button"
+            aria-label="add"
+          ></button>
         </section>
         <section class="popup">
           <div class="popup__container">
-            <button type="button" class="popup__button-close"></button>
+            <button
+              type="button"
+              class="popup__button-close"
+              area-label="close"
+            ></button>
             <h2 class="form-edit-profile__heading">Edit profile</h2>
             <form class="form-edit-profile" name="form-edit-profile">
               <input
@@ -53,7 +65,11 @@
                 placeholder=""
                 name="job"
               />
-              <button type="submit" class="form-edit-profile__button-submit">
+              <button
+                type="submit"
+                class="form-edit-profile__button-submit"
+                aria-label="save"
+              >
                 Save
               </button>
             </form>
@@ -68,7 +84,11 @@
             />
             <div class="element__wrap">
               <h2 class="element__title">Yosemite Valley</h2>
-              <button class="element__button-like" type="button"></button>
+              <button
+                class="element__button-like"
+                type="button"
+                aria-label="like"
+              ></button>
             </div>
           </article>
           <article class="element">
@@ -79,7 +99,11 @@
             />
             <div class="element__wrap">
               <h2 class="element__title">Lake Louise</h2>
-              <button class="element__button-like" type="button"></button>
+              <button
+                class="element__button-like"
+                type="button"
+                aria-label="like"
+              ></button>
             </div>
           </article>
           <article class="element">
@@ -90,7 +114,11 @@
             />
             <div class="element__wrap">
               <h2 class="element__title">Bald Mountains</h2>
-              <button class="element__button-like" type="button"></button>
+              <button
+                class="element__button-like"
+                type="button"
+                aria-label="like"
+              ></button>
             </div>
           </article>
           <article class="element">
@@ -101,7 +129,11 @@
             />
             <div class="element__wrap">
               <h2 class="element__title">Latemar</h2>
-              <button class="element__button-like" type="button"></button>
+              <button
+                class="element__button-like"
+                type="button"
+                aria-label="like"
+              ></button>
             </div>
           </article>
           <article class="element">
@@ -112,7 +144,11 @@
             />
             <div class="element__wrap">
               <h2 class="element__title">Vanoise National Park</h2>
-              <button class="element__button-like" type="button"></button>
+              <button
+                class="element__button-like"
+                type="button"
+                aria-label="like"
+              ></button>
             </div>
           </article>
           <article class="element">
@@ -123,7 +159,11 @@
             />
             <div class="element__wrap">
               <h2 class="element__title">Lago di Braies</h2>
-              <button class="element__button-like" type="button"></button>
+              <button
+                class="element__button-like"
+                type="button"
+                aria-label="like"
+              ></button>
             </div>
           </article>
         </section>
