--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
         </section>
         <section class="elements">
-          <article class="element">
+          <!-- <article class="element">
             <img
               class="element__image"
               src="images/yosemite-valley.png"
@@ -165,13 +165,26 @@
                 aria-label="like"
               ></button>
             </div>
-          </article>
+          </article> -->
         </section>
       </main>
       <footer class="footer">
         <p class="copyright">&copy; 2022 Around The U.S.</p>
       </footer>
     </div>
+    <template id="template-element">
+      <article class="element">
+        <img class="element__image" src="" alt="" />
+        <div class="element__wrap">
+          <h2 class="element__title">Bald Mountains</h2>
+          <button
+            class="element__button-like"
+            type="button"
+            aria-label="like"
+          ></button>
+        </div>
+      </article>
+    </template>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
