feat(element): added delete button for each element

--- a/index.html
+++ b/index.html
@@ -75,98 +75,7 @@
             </form>
           </div>
         </section>
-        <section class="elements">
-          <!-- <article class="element">
-            <img
-              class="element__image"
-              src="images/yosemite-valley.png"
-              alt="Yosemite Valley photo"
-            />
-            <div class="element__wrap">
-              <h2 class="element__title">Yosemite Valley</h2>
-              <button
-                class="element__button-like"
-                type="button"
-                aria-label="like"
-              ></button>
-            </div>
-          </article>
-          <article class="element">
-            <img
-              class="element__image"
-              src="images/lake-louise.png"
-              alt="Lake Louise photo"
-            />
-            <div class="element__wrap">
-              <h2 class="element__title">Lake Louise</h2>
-              <button
-                class="element__button-like"
-                type="button"
-                aria-label="like"
-              ></button>
-            </div>
-          </article>
-          <article class="element">
-            <img
-              class="element__image"
-              src="images/bald-mountains.png"
-              alt="Bald Mountains photo"
-            />
-            <div class="element__wrap">
-              <h2 class="element__title">Bald Mountains</h2>
-              <button
-                class="element__button-like"
-                type="button"
-                aria-label="like"
-              ></button>
-            </div>
-          </article>
-          <article class="element">
-            <img
-              class="element__image"
-              src="images/latemar.png"
-              alt="Latemar photo"
-            />
-            <div class="element__wrap">
-              <h2 class="element__title">Latemar</h2>
-              <button
-                class="element__button-like"
-                type="button"
-                aria-label="like"
-              ></button>
-            </div>
-          </article>
-          <article class="element">
-            <img
-              class="element__image"
-              src="images/vanoise-national-park.png"
-              alt="Vanoise National Park photo"
-            />
-            <div class="element__wrap">
-              <h2 class="element__title">Vanoise National Park</h2>
-              <button
-                class="element__button-like"
-                type="button"
-                aria-label="like"
-              ></button>
-            </div>
-          </article>
-          <article class="element">
-            <img
-              class="element__image"
-              src="images/lago-di-braies.png"
-              alt="Lago di Braies photo"
-            />
-            <div class="element__wrap">
-              <h2 class="element__title">Lago di Braies</h2>
-              <button
-                class="element__button-like"
-                type="button"
-                aria-label="like"
-              ></button>
-            </div>
-          </article> -->
-        </section>
+        <section class="elements"></section>
       </main>
       <footer class="footer">
         <p class="copyright">&copy; 2022 Around The U.S.</p>
@@ -175,10 +84,15 @@
     <template id="template-element">
       <article class="element">
         <img class="element__image" src="" alt="" />
+        <button
+          class="element__button element__button_action_delete"
+          type="button"
+          aria-label="delete"
+        ></button>
         <div class="element__wrap">
           <h2 class="element__title">Bald Mountains</h2>
           <button
-            class="element__button-like"
+            class="element__button element__button_action_like"
             type="button"
             aria-label="like"
           ></button>
