feat(popup) added new template fot popup container

--- a/index.html
+++ b/index.html
@@ -99,6 +99,25 @@
         </div>
       </article>
     </template>
+    <template id="template-popup-container">
+      <div class="popup__container">
+        <button
+          type="button"
+          class="popup__button-close"
+          area-label="close"
+        ></button>
+        <h2 class="form__heading"></h2>
+        <form class="form" name="">
+          <input type="text" class="form__input" placeholder="" name="" />
+          <input type="text" class="form__input" placeholder="" name="" />
+          <button
+            type="submit"
+            class="form__button-submit"
+            aria-label=""
+          ></button>
+        </form>
+      </div>
+    </template>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
