--- a/index.html
+++ b/index.html
@@ -44,37 +44,7 @@
             aria-label="add"
           ></button>
         </section>
-        <section class="popup">
-          <div class="popup__container">
-            <button
-              type="button"
-              class="popup__button-close"
-              area-label="close"
-            ></button>
-            <h2 class="form-edit-profile__heading">Edit profile</h2>
-            <form class="form-edit-profile" name="form-edit-profile">
-              <input
-                type="text"
-                class="form-edit-profile__input form-edit-profile__input_type_name"
-                placeholder=""
-                name="name"
-              />
-              <input
-                type="text"
-                class="form-edit-profile__input form-edit-profile__input_type_job"
-                placeholder=""
-                name="job"
-              />
-              <button
-                type="submit"
-                class="form-edit-profile__button-submit"
-                aria-label="save"
-              >
-                Save
-              </button>
-            </form>
-          </div>
-        </section>
+        <section class="popup"></section>
         <section class="elements"></section>
       </main>
       <footer class="footer">
@@ -108,8 +78,20 @@
         ></button>
         <h2 class="form__heading"></h2>
         <form class="form" name="">
-          <input type="text" class="form__input" placeholder="" name="" />
-          <input type="text" class="form__input" placeholder="" name="" />
+          <input
+            type="text"
+            id="inputFirst"
+            class="form__input"
+            placeholder=""
+            name=""
+          />
+          <input
+            type="text"
+            id="inputScnd"
+            class="form__input"
+            placeholder=""
+            name=""
+          />
           <button
             type="submit"
             class="form__button-submit"
