--- a/index.html
+++ b/index.html
@@ -100,6 +100,12 @@
         </form>
       </div>
     </template>
+    <template id="template-popup-image">
+      <div class="popup__image-container">
+        <img class="popup-image" src="" alt="" />
+        <h2 class="popup-image__title"></h2>
+      </div>
+    </template>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
