fix(popup): separated form  template fromm popup container template

--- a/index.html
+++ b/index.html
@@ -76,29 +76,31 @@
           class="popup__button-close"
           area-label="close"
         ></button>
-        <h2 class="form__heading"></h2>
-        <form class="form" name="">
-          <input
-            type="text"
-            id="inputFirst"
-            class="form__input"
-            placeholder=""
-            name=""
-          />
-          <input
-            type="text"
-            id="inputScnd"
-            class="form__input"
-            placeholder=""
-            name=""
-          />
-          <button
-            type="submit"
-            class="form__button-submit"
-            aria-label=""
-          ></button>
-        </form>
       </div>
+    </template>
+    <template id="template-popup-form">
+      <h2 class="form__heading"></h2>
+      <form class="form" name="">
+        <input
+          type="text"
+          id="inputFirst"
+          class="form__input"
+          placeholder=""
+          name=""
+        />
+        <input
+          type="text"
+          id="inputScnd"
+          class="form__input"
+          placeholder=""
+          name=""
+        />
+        <button
+          type="submit"
+          class="form__button-submit"
+          aria-label=""
+        ></button>
+      </form>
     </template>
     <template id="template-popup-image">
       <div class="popup__image-container">
