fix: added # to source attribute for all template img tags

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
     <template id="template-element">
       <article class="element">
-        <img class="element__image" src="" alt="" />
+        <img class="element__image" src="#" alt="" />
         <button
           class="element__button element__button_action_delete"
           type="button"
@@ -103,7 +103,7 @@
       </form>
     </template>
     <template id="template-popup-image">
-      <img class="popup-image" src="" alt="" />
+      <img class="popup-image" src="#" alt="" />
       <h2 class="popup-image__title"></h2>
     </template>
     <script src="./scripts/index.js"></script>
