fix: refactoring. Popup close button class splitted for image, form and common content

--- a/index.html
+++ b/index.html
@@ -43,7 +43,48 @@
           aria-label="add"
         ></button>
       </section>
-      <section class="popup"></section>
+      <section class="popup">
+        <div class="popup__container popup__container_content_form">
+          <button
+            type="button"
+            class="popup__button-close popup__button-close_content_form"
+            area-label="close"
+          ></button>
+          <h2 class="form__heading"></h2>
+          <form class="form" name="">
+            <input
+              type="text"
+              id="inputFirst"
+              class="form__input"
+              placeholder=""
+              name=""
+            />
+            <input
+              type="text"
+              id="inputScnd"
+              class="form__input"
+              placeholder=""
+              name=""
+            />
+            <button
+              type="submit"
+              class="form__button-submit"
+              aria-label=""
+            ></button>
+          </form>
+        </div>
+      </section>
+      <section class="popup">
+        <div class="popup__container popup__container_content_image">
+          <button
+            type="button"
+            class="popup__button-close popup__button-close_content_image"
+            area-label="close"
+          ></button>
+          <img class="popup-image" src="#" alt="" />
+          <h2 class="popup-image__title"></h2>
+        </div>
+      </section>
       <section class="elements"></section>
     </main>
     <footer class="footer">
