--- a/index.html
+++ b/index.html
@@ -44,33 +44,62 @@
         ></button>
       </section>
       <section class="popup">
-        <div class="popup__container popup__container_content_form">
+        <div
+          class="popup__container popup__container_content_edit-profile popup__container_content_form"
+        >
           <button
             type="button"
             class="popup__button-close popup__button-close_content_form"
             area-label="close"
           ></button>
-          <h2 class="form__heading"></h2>
-          <form class="form" name="">
+          <h2 class="form__heading">Edit profile</h2>
+          <form class="form" name="form-edit-profile">
             <input
               type="text"
-              id="inputFirst"
-              class="form__input"
-              placeholder=""
-              name=""
+              class="form__input form__input_type_name"
+              name="name"
             />
             <input
               type="text"
-              id="inputScnd"
-              class="form__input"
-              placeholder=""
-              name=""
+              class="form__input form__input_type_job"
+              name="job"
+            />
+            <button type="submit" class="form__button-submit" aria-label="save">
+              Save
+            </button>
+          </form>
+        </div>
+      </section>
+      <section class="popup">
+        <div
+          class="popup__container popup__container_content_add-card popup__container_content_form"
+        >
+          <button
+            type="button"
+            class="popup__button-close popup__button-close_content_form"
+            area-label="close"
+          ></button>
+          <h2 class="form__heading">New place</h2>
+          <form class="form" name="form-add-card">
+            <input
+              type="text"
+              class="form__input form__input_type_title"
+              placeholder="Title"
+              name="title"
+            />
+            <input
+              type="text"
+              class="form__input form__input_type_link"
+              placeholder="Image link"
+              name="image link"
             />
             <button
               type="submit"
               class="form__button-submit"
-              aria-label=""
-            ></button>
+              aria-label="create"
+            >
+              Create
+            </button>
           </form>
         </div>
       </section>
@@ -79,7 +108,7 @@
           <button
             type="button"
             class="popup__button-close popup__button-close_content_image"
-            area-label="close"
+            area-label="close-popup-image"
           ></button>
           <img class="popup-image" src="#" alt="" />
           <h2 class="popup-image__title"></h2>
@@ -109,43 +138,7 @@
         </div>
       </article>
     </template>
-    <template id="template-popup-container">
-      <div class="popup__container">
-        <button
-          type="button"
-          class="popup__button-close"
-          area-label="close"
-        ></button>
-      </div>
-    </template>
-    <template id="template-popup-form">
-      <h2 class="form__heading"></h2>
-      <form class="form" name="">
-        <input
-          type="text"
-          id="inputFirst"
-          class="form__input"
-          placeholder=""
-          name=""
-        />
-        <input
-          type="text"
-          id="inputScnd"
-          class="form__input"
-          placeholder=""
-          name=""
-        />
-        <button
-          type="submit"
-          class="form__button-submit"
-          aria-label=""
-        ></button>
-      </form>
-    </template>
-    <template id="template-popup-image">
-      <img class="popup-image" src="#" alt="" />
-      <h2 class="popup-image__title"></h2>
-    </template>
+
     <script src="./scripts/index.js"></script>
   </body>
 </html>
