fix(popup image): image title tag changed to p

--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
             class="popup__button-close popup__button-close_content_image"
             area-label="close-popup-image"
           ></button>
-          <img class="popup-image" src="#" alt="" />
-          <h2 class="popup-image__title"></h2>
+          <img class="popup-image" src="#" alt="#" />
+          <p class="popup-image__title"></p>
         </div>
       </section>
       <section class="elements"></section>
