fix(popup image): class name refactoring. Now image is the element of the popup

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
             class="popup__button-close popup__button-close_content_image"
             area-label="close-popup-image"
           ></button>
-          <img class="popup-image" src="#" alt="#" />
-          <p class="popup-image__title"></p>
+          <img class="popup__image" src="#" alt="#" />
+          <p class="popup__image-title"></p>
         </div>
       </section>
       <section class="elements"></section>
