feat(popupValidation): added popup__form class to form tags

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             area-label="close"
           ></button>
 
-          <form class="form" name="form-edit-profile">
+          <form class="form popup__form" name="form-edit-profile">
             <h2 class="form__heading">Edit profile</h2>
             <input
               type="text"
@@ -81,7 +81,7 @@
             area-label="close"
           ></button>
 
-          <form class="form" name="form-add-card">
+          <form class="form popup__form" name="form-add-card">
             <h2 class="form__heading">New place</h2>
             <input
               type="text"
