feat(popupValidation): added popup__input class to input tags

--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
             <h2 class="form__heading">Edit profile</h2>
             <input
               type="text"
-              class="form__input form__input_type_name"
+              class="form__input form__input_type_name popup__input"
               name="name"
             />
             <input
               type="text"
-              class="form__input form__input_type_job"
+              class="form__input form__input_type_job popup__input"
               name="job"
             />
             <button type="submit" class="form__button-submit" aria-label="save">
@@ -85,13 +85,13 @@
             <h2 class="form__heading">New place</h2>
             <input
               type="text"
-              class="form__input form__input_type_title"
+              class="form__input form__input_type_title popup__input"
               placeholder="Title"
               name="title"
             />
             <input
               type="text"
-              class="form__input form__input_type_link"
+              class="form__input form__input_type_link popup__input"
               placeholder="Image link"
               name="image link"
             />
