feat(popupValidation): added popup__button class to buttons of type submit

--- a/index.html
+++ b/index.html
@@ -65,7 +65,11 @@
               class="form__input form__input_type_job popup__input"
               name="job"
             />
-            <button type="submit" class="form__button-submit" aria-label="save">
+            <button
+              type="submit"
+              class="form__button-submit popup__button"
+              aria-label="save"
+            >
               Save
             </button>
           </form>
@@ -97,7 +101,7 @@
             />
             <button
               type="submit"
-              class="form__button-submit"
+              class="form__button-submit popup__button"
               aria-label="create"
             >
               Create
