feat(popupValidation): added span elements with popup__error class

--- a/index.html
+++ b/index.html
@@ -60,11 +60,13 @@
               class="form__input form__input_type_name popup__input"
               name="name"
             />
+            <span class="popup__error"></span>
             <input
               type="text"
               class="form__input form__input_type_job popup__input"
               name="job"
             />
+            <span class="popup__error"></span>
             <button
               type="submit"
               class="form__button-submit popup__button"
@@ -93,12 +95,14 @@
               placeholder="Title"
               name="title"
             />
+            <span class="popup__error"></span>
             <input
               type="text"
               class="form__input form__input_type_link popup__input"
               placeholder="Image link"
               name="image link"
             />
+            <span class="popup__error"></span>
             <button
               type="submit"
               class="form__button-submit popup__button"
