--- a/index.html
+++ b/index.html
@@ -53,13 +53,16 @@
             area-label="close"
           ></button>
 
-          <form class="form popup__form" name="form-edit-profile">
+          <form class="form popup__form" name="form-edit-profile" novalidate>
             <h2 class="form__heading">Edit profile</h2>
             <input
               type="text"
               class="form__input form__input_type_name popup__input"
               name="name"
               id="name-input"
+              minlength="2"
+              maxlength="40"
+              required
             />
             <span class="popup__error" id="name-input-error"></span>
             <input
@@ -67,6 +70,9 @@
               class="form__input form__input_type_job popup__input"
               name="job"
               id="job-input"
+              minlength="2"
+              maxlength="200"
+              required
             />
             <span class="popup__error" id="job-input-error"></span>
             <button
@@ -89,7 +95,7 @@
             area-label="close"
           ></button>
 
-          <form class="form popup__form" name="form-add-card">
+          <form class="form popup__form" name="form-add-card" novalidate>
             <h2 class="form__heading">New place</h2>
             <input
               type="text"
@@ -97,6 +103,9 @@
               placeholder="Title"
               name="title"
               id="title-input"
+              minlength="1"
+              maxlength="30"
+              required
             />
             <span class="popup__error" id="title-input-error"></span>
             <input
@@ -105,6 +114,7 @@
               placeholder="Image link"
               name="image link"
               id="image-link-input"
+              required
             />
             <span class="popup__error" id="image-link-input-error"></span>
             <button
@@ -152,8 +162,7 @@
         </div>
       </article>
     </template>
-
-    <script src="./scripts/index.js"></script>
-    <script src="./scripts/validate.js"></script>
+    <script src="./scripts/index.js" type="module"></script>
+    <script src="./scripts/validate.js" type="module"></script>
   </body>
 </html>
