feat(popup): button-close aria-label property typo fixed

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <button
             type="button"
             class="popup__button-close popup__button-close_content_form"
-            area-label="close"
+            aria-label="close"
           ></button>
 
           <form class="form popup__form" name="form-edit-profile" novalidate>
@@ -92,7 +92,7 @@
           <button
             type="button"
             class="popup__button-close popup__button-close_content_form"
-            area-label="close"
+            aria-label="close"
           ></button>
 
           <form class="form popup__form" name="form-add-card" novalidate>
@@ -132,7 +132,7 @@
           <button
             type="button"
             class="popup__button-close popup__button-close_content_image"
-            area-label="close-popup-image"
+            aria-label="close-popup-image"
           ></button>
           <img class="popup__image" src="#" alt="#" />
           <p class="popup__image-title"></p>
