--- a/index.html
+++ b/index.html
@@ -164,5 +164,6 @@
     </template>
     <script src="./scripts/index.js" type="module"></script>
     <script src="./scripts/validate.js" type="module"></script>
+    git
   </body>
 </html>
