--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
       </article>
     </template>
     <script src="./scripts/index.js" type="module"></script>
+    <script src="./scripts/Card.js" type="mudule"></script>
+    <script src="./scripts/FormValidator.js" type="module"></script>
     <script src="./scripts/validate.js" type="module"></script>
     git
   </body>
