--- a/index.html
+++ b/index.html
@@ -165,7 +165,8 @@
     <script src="./scripts/index.js" type="module"></script>
     <script src="./scripts/Card.js" type="mudule"></script>
     <script src="./scripts/FormValidator.js" type="module"></script>
-    <script src="./scripts/validate.js" type="module"></script>
+    <script src="./scripts/utils.js" type="module"></script>
+    <!-- <script src="./scripts/validate.js" type="module"></script> -->
     git
   </body>
 </html>
