--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
       </article>
     </template>
     <script src="./scripts/index.js" type="module"></script>
-    <script src="./scripts/Card.js" type="mudule"></script>
+    <!--     <script src="./scripts/Card.js" type="module"></script>
     <script src="./scripts/FormValidator.js" type="module"></script>
-    <script src="./scripts/utils.js" type="module"></script>
+    <script src="./scripts/utils.js" type="module"></script> -->
   </body>
 </html>
