refact: Popup.js created

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           aria-label="add"
         ></button>
       </section>
-      <section class="popup">
+      <section class="popup popup_content_edit-profile">
         <div
           class="popup__container popup__container_content_edit-profile popup__container_content_form"
         >
@@ -85,7 +85,7 @@
           </form>
         </div>
       </section>
-      <section class="popup">
+      <section class="popup popup_content_add-card">
         <div
           class="popup__container popup__container_content_add-card popup__container_content_form"
         >
@@ -127,7 +127,7 @@
           </form>
         </div>
       </section>
-      <section class="popup">
+      <section class="popup popup_content_image">
         <div class="popup__container popup__container_content_image">
           <button
             type="button"
