--- a/index.html
+++ b/index.html
@@ -162,6 +162,6 @@
         </div>
       </article>
     </template>
-    <script src="./scripts/index.js" type="module"></script>
+    <script src="./pages/index.js" type="module"></script>
   </body>
 </html>
