--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <meta name="keywords" content="html, css, javascript" />
     <meta name="author" content="Alex Darincev" />
-    <link rel="stylesheet" href="pages/index.css" />
+    <link rel="stylesheet" href="page/index.css" />
     <title>Around The U.S.</title>
   </head>
   <body class="page">
@@ -112,7 +112,7 @@
               type="url"
               class="form__input form__input_type_link popup__input"
               placeholder="Image link"
-              name="image link"
+              name="link"
               id="image-link-input"
               required
             />
@@ -162,6 +162,6 @@
         </div>
       </article>
     </template>
-    <script src="./pages/index.js" type="module"></script>
+    <script src="./page/index.js" type="module"></script>
   </body>
 </html>
