refact: redundant metadata removed

--- a/src/index.html
+++ b/src/index.html
@@ -2,28 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Web Project 4. An interactive page where users can add, remove, or like photos"
-    />
-    <meta name="keywords" content="html, css, javascript" />
-    <meta name="author" content="Alex Darincev" />
-    <link rel="stylesheet" href="pages/index.css" />
     <title>Around The U.S.</title>
   </head>
   <body class="page">
     <header class="header">
       <img class="header__logo" src="<%=
-      require("./images/logo/header-logo.svg")%>"%" alt="Around the U.S. logo"
-      />
+      require("./images/logo/header-logo.svg")%>"%" alt="Around the U.S. logo" >
     </header>
     <main class="content">
       <section class="profile">
         <img class="avatar" src="<%=
         require("./images/jacq-cousteau-avatar-pic.png")%>"%" alt="Jacques
-        Cousteau photo" />
+        Cousteau photo" >
         <div class="profile-info">
           <h1 class="profile-info__name">Jacques Cousteau</h1>
           <button
@@ -158,6 +149,5 @@
         </div>
       </article>
     </template>
-    <!-- <script src="./pages/index.js" type="module"></script> -->
   </body>
 </html>
