fix: removed redundand symbols from src value i img tags

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,12 @@
   <body class="page">
     <header class="header">
       <img class="header__logo" src="<%=
-      require("./images/logo/header-logo.svg")%>"%" alt="Around the U.S. logo" >
+      require("./images/logo/header-logo.svg")%>" alt="Around the U.S. logo" >
     </header>
     <main class="content">
       <section class="profile">
         <img class="avatar" src="<%=
-        require("./images/jacq-cousteau-avatar-pic.png")%>"%" alt="Jacques
+        require("./images/jacq-cousteau-avatar-pic.png")%>" alt="Jacques
         Cousteau photo" >
         <div class="profile-info">
           <h1 class="profile-info__name">Jacques Cousteau</h1>
