feat(card): added a like-counter to html and set it's style

--- a/src/index.html
+++ b/src/index.html
@@ -141,11 +141,14 @@
         ></button>
         <div class="element__wrap">
           <h2 class="element__title">Bald Mountains</h2>
-          <button
-            class="element__button element__button_action_like"
-            type="button"
-            aria-label="like"
-          ></button>
+          <div class="element_like-container">
+            <button
+              class="element__button element__button_action_like"
+              type="button"
+              aria-label="like"
+            ></button>
+            <p class="element__like-counter">0</p>
+          </div>
         </div>
       </article>
     </template>
