refact: class avatar__overlay replaced by profile__avatar-overlay - blocking issue

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     </header>
     <main class="content">
       <section class="profile">
-        <div class="avatar__overlay">
+        <div class="profile__avatar-overlay">
           <img class="avatar" src="<%=
           require("./images/jacq-cousteau-avatar-pic.png")%>" alt="Avatar
           picture" />
